--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>[Luka Leroy] | Data & AI engineer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="[Luka Leroy] | Data & AI engineer" />
 
     <link
       rel="stylesheet"
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Aangenaam, ik ben <span class="text-color-main">Luka Leroy</span>
           <br />
-          I'm the Unknown Developer.
+          Ik studeer toegepaste informatica aan HoGent en ben gepassioneerd door data en AI.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Kom meer te weten</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile_pic.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,18 +79,20 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                Ik ben leergierig en enthousiast om nieuwe technologieën te ontdekken en toe te passen.
+                Positiviteit is een bij mij een must, ik ben altijd bereid om te helpen en samen te werken.
+                Mijn engagement is ook niet ver te zoeken, ik zal altijd mijn uiterste best doen om een project tot een goed einde te brengen.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Ik sta al 4 jaar leiding bij chiro Juventud Wichelen en ben sinds vorig jaar ook voorzitter van het lokale jeugdhuis.
+                Mijn doel is om mensen samen te brengen en een leuke tijd te bezorgen.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/cv_Luka_Leroy.pdf"
                 >
                   View Resume
                 </a>
@@ -112,27 +114,22 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Data engineering project 1</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Dit project had als doel vluchtinformatie te scrapen van TUI, Ryanair, Transavia en Brussels Airlines.
+                    Het project is volledig opgebouwd in Python en is ontworpen om standalone te draaien op een Almalinux 9 server.
+                    De verzamelde gegevens worden opgeschoond en ingeladen in een MySQL database als OLTP database.
+                    In dezelfde MySQL-omgeving wordt een Datawarehouse opgezet.
+                    Door ee nverbinding te maken tussen PowerBI en MYSQL kunnen er meerdere analyserapporten gemaakt worden van de veramelde gegevens.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/ademayari/data-engineering-project-1"
                 >
                   Source Code
                 </a>
@@ -151,7 +148,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project1.png"
                     />
                   </div>
                 </a>
@@ -164,27 +161,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Data engineering project 2</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Project gemaakt voor VOKA dat een recommendation systeem bevat voor klanten.
+                    Het is volledig in python geschreven.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/ilianbronchart/voka-dep2"
                 >
                   Source Code
                 </a>
@@ -192,7 +181,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://www.voka.be/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -203,7 +192,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.jpg"
                     />
                   </div>
                 </a>
@@ -219,31 +208,17 @@
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                   Tijdens mijn stage heb ik gewerkt aan een onderzoeksproject dat zich focuste op het corrigeren van het pad van een robot doormiddel van visuele odometrie.
+                   Er is gebruik gemaakt van OpenCV en python.
+                   Het project is nog niet volledig afgerond, er is nog verder onderzoek naar nodig.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://ilvo.vlaanderen.be/nl/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -254,7 +229,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/ilvo.png"
                     />
                   </div>
                 </a>
@@ -272,13 +247,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Contacteer me voor verdere vragen!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:luka.leroy@student.hogent.be"
+            >E-mail</a
           >
         </div>
       </div>
@@ -292,13 +267,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a rel="noreferrer" href="https://www.instagram.com/luka_lroy/" target="_blank">
+            <i class="fa fa-instagram fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/luka-leroy-115665266/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/LukaLeroy" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -314,28 +289,6 @@
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer" 
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
