--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Visuele odometrie project</h3>
                 <div>
                   <p class="mb-4">
                    Tijdens mijn stage heb ik gewerkt aan een onderzoeksproject dat zich focuste op het corrigeren van het pad van een robot doormiddel van visuele odometrie.
