--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Ik ben leergierig en enthousiast om nieuwe technologieën te ontdekken en toe te passen.
-                Positiviteit is een bij mij een must, ik ben altijd bereid om te helpen en samen te werken.
+                Positiviteit is bij mij een must, ik ben altijd bereid om te helpen en samen te werken.
                 Mijn engagement is ook niet ver te zoeken, ik zal altijd mijn uiterste best doen om een project tot een goed einde te brengen.
               </p>
               <p class="about-wrapper__info-text">
